# aliasman-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml  released.yml  requests.yml
src/: alias.rs  cli.rs  lib.rs  main.rs  proc.rs  shell_utils.rs  updateable.rs
