[package]
name = "ohmyalias"
version = "1.2.6"
edition = "2021"
readme = "README.md"
authors = ["Andy Garcia <agf030124@gmail.com>"]
license = "MIT"
description = """A simple tool for manage your aliasses"""
keywords = ["utility","tool", "aliasses", "alias", "linux"]
categories = ["command-line-interface","command-line-utilities","config"]
homepage = "https://github.com/Andy2403/aliasman-rs"
repository = "https://github.com/Andy2403/aliasman-rs"

[badges]
maintenance = { status = "actively-developed" }
[build-dependencies]
dotenv-build = "0.1.1"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
sysinfo = "0.31.2"
curl = "0.4.46"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
spinners = "4.1.1"

[package.metadata.deb]
maintainer = "Andy Garcia <agf030124@gmail.com>"
copyright = "2024, Andy Garcia <agf030124@gmail.com>"
license = "MIT"
extended-description = """A simple tool for manage your aliasses"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
 ["target/release/ohmyalias", ".", "755"],
]
